rhai/codegen/ui_tests/rhai_fn_rename_to_index_setter.stderr
error: use attribute 'index_set' instead
  --> $DIR/rhai_fn_rename_to_index_setter.rs:12:15
   |
12 |     #[rhai_fn(name = "index$set$")]
   |               ^^^^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> $DIR/rhai_fn_rename_to_index_setter.rs:23:8
   |
23 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
